Fixing tight spacing between product filters - BUG-737

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -68,15 +68,10 @@
         display: inline-block;
         vertical-align: middle;
         position: relative;
-        @include to-rem(margin-right, $spacing-micro);
+        @include to-rem(margin-right, $spacing-third);
 
         /* Turn off right margin for last child */
         &:last-child {margin-right: 0;}
-
-        /* Old IE */
-        @include old-ie {
-          @include to-rem(margin-right, $spacing-quarter);
-        }
       }
     }
 
